--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.561.0",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
