--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "class-variance-authority": "^0.7.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.561.0",
     "nanoid": "^5.1.6",
     "next": "16.0.10",
@@ -30,6 +31,7 @@
     "react-dom": "19.2.1",
     "react-email": "^5.2.1",
     "react-hook-form": "^7.69.0",
+    "react-leaflet": "^5.0.0",
     "resend": "^6.7.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
