--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-email/render": "^2.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "array-move": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.561.0",
@@ -31,6 +32,7 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-easy-sort": "^1.8.0",
     "react-email": "^5.2.1",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
