--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.968.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
@@ -24,7 +27,6 @@
     "@react-email/render": "^2.0.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
-    "array-move": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.561.0",
@@ -32,7 +34,6 @@
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-easy-sort": "^1.8.0",
     "react-email": "^5.2.1",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
